Add start date, end date and logo for tournament
