# src/EArenaTournamentManager.Application/ResponseDTOs/Tournaments/TournamentResponse.cs
@@ -15,11 +15,14 @@ namespace EArenaTournamentManager.Application.ResponseDTOs.Tournaments
         public int OrganizationId { get; set; }
 
         public string Name { get; set; } = string.Empty;
+        public string? LogoImageUrl { get; set; }
         public string? Format { get; set; }
         public string? Map { get; set; }
         public string? Region { get; set; }
         public string? Rules { get; set; }
         public string? Prizes { get; set; }
+        public long StartDate { get; set; }
+        public long EndDate { get; set; }
         public long DateTime { get; set; }
         public int CreatedBy { get; set; }
         public long CreatedOn { get; set; }
