# src/EArenaTournamentManager.Domain/Entities/Tournament.cs
@@ -14,10 +14,13 @@ namespace EArenaTournamentManager.Domain.Entities
         public int OrganizationId { get; set; }
 
         public string Name { get; set; } = string.Empty;
+        public string? LogoImageUrl { get; set; }
         public string? Format { get; set; }
         public string? Map { get; set; }
         public string? Region { get; set; }
-        public long DateTime { get; set; }        
+        public long StartDate { get; set; }
+        public long EndDate { get; set; }
+        public long DateTime { get; set; }
         public string? Rules { get; set; }
         public string? Prizes { get; set; }
         public RegistrationStatus Status { get; set; }
